# epitran-C

./: .gitmodules
epitran-c/: CMakeLists.txt  ligaturize.c  ligaturize.h
